[gd_scene load_steps=2 format=3 uid="uid://dejllv4o3xuhb"]

[ext_resource type="Script" path="res://ui/gui.gd" id="1_hx1ux"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_hx1ux")

[node name="HealthMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 30)
offset_top = 532.0
offset_right = 454.0
offset_bottom = 614.0

[node name="HealthBar" type="ProgressBar" parent="HealthMargin"]
modulate = Color(0, 0.572549, 0.121569, 1)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
show_percentage = false

[node name="AmmoMargin" type="MarginContainer" parent="."]
visible = false
offset_top = 605.0
offset_right = 454.0
offset_bottom = 645.0

[node name="AmmoCounter" type="Label" parent="."]
top_level = true
offset_left = 16.0
offset_top = 616.0
offset_right = 56.0
offset_bottom = 640.0
auto_translate = false
horizontal_alignment = 2
vertical_alignment = 2

[node name="PointCounter" type="Label" parent="."]
offset_left = 72.0
offset_top = 616.0
offset_right = 128.0
offset_bottom = 640.0
horizontal_alignment = 2
vertical_alignment = 2
